@@ -1,6 +1,12 @@
 # ChangeLog for app-xemacs/gentoo-syntax
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-xemacs/gentoo-syntax/ChangeLog,v 1.9 2009/01/02 18:16:47 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-xemacs/gentoo-syntax/ChangeLog,v 1.10 2009/01/11 18:27:18 graaff Exp $
+
+*gentoo-syntax-1.11 (11 Jan 2009)
+
+  11 Jan 2009; Hans de Graaff <graaff@gentoo.org>
+  +gentoo-syntax-1.11.ebuild:
+  Version bump with some XEmacs compatibility fixes.
 
 *gentoo-syntax-1.10 (02 Jan 2009)
 
